--- a/compose.yaml
+++ b/compose.yaml
@@ -3,8 +3,8 @@ version: '3.8'
 services:
   db:
     image: postgres:15.3
-    expose:
-      - 5432
+    ports:
+      - "6543:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
